Implements getAllReminders in ReminderRepository.kt Creates EditReminderFragment.kt and EditReminderFragmentViewModel.kt
Todo: Add functionality to edit fragment and viewModel.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,8 @@
 
     <fragment
         android:id="@+id/reminderListFragment"
-        android:name="com.adarsh.reminderapp.ui.ReminderListFragment"
+        android:name="com.adarsh.reminderapp.ui.list.ReminderListFragment"
         android:label="fragment_reminder_list"
         tools:layout="@layout/fragment_reminder_list" />
+<!--    todo ADD EditFrag-->
 </navigation>
