Implements basic EditFragmentViewModel

--- a/app/src/main/res/layout/fragment_edit_reminder.xml
+++ b/app/src/main/res/layout/fragment_edit_reminder.xml
@@ -7,11 +7,13 @@
     tools:context=".ui.edit.EditReminderFragment">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/etTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_bg"
-        android:hint="hELLO ASHDIASO"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        android:hint="Enter a title..."
         android:maxLines="5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,11 +26,12 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/white"
         android:src="@android:drawable/ic_input_add"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
+        app:layout_constraintBottom_toBottomOf="@+id/etTitle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/etTitle" />
 
     <EditText
+        android:id="@+id/etDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Description..."
