--- a/app/src/main/res/layout/fragment_reminder_list.xml
+++ b/app/src/main/res/layout/fragment_reminder_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,4 +19,4 @@
         android:layout_margin="24dp"
         android:src="@android:drawable/ic_input_add" />
 
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
