--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/reminderListFragment"
         android:name="com.adarsh.reminderapp.ui.list.ReminderListFragment"
-        android:label="fragment_reminder_list"
-        tools:layout="@layout/fragment_reminder_list" >
+        android:label="Reminder"
+        tools:layout="@layout/fragment_reminder_list">
         <action
             android:id="@+id/action_reminderListFragment_to_editReminderFragment"
             app:destination="@id/editReminderFragment" />
@@ -17,8 +17,8 @@
     <fragment
         android:id="@+id/editReminderFragment"
         android:name="com.adarsh.reminderapp.ui.edit.EditReminderFragment"
-        android:label="fragment_edit_reminder"
-        tools:layout="@layout/fragment_edit_reminder" >
+        android:label="Edit Reminder"
+        tools:layout="@layout/fragment_edit_reminder">
         <argument
             android:name="reminder"
             app:argType="com.adarsh.reminderapp.data.ReminderModel"
